--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-cli-hooks",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "dist",
   "builders": "builders.json",
   "description": "Hooks for the Angular CLI",
@@ -28,12 +28,14 @@
   "peerDependencies": {
     "@angular-devkit/architect": "^0.7.5",
     "@angular-devkit/build-angular": "^0.7.5",
-    "@angular-devkit/core": "^0.7.5"
+    "@angular-devkit/core": "^0.7.5",
+    "@ionic/ng-toolkit": "^1.0.8"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.7.5",
     "@angular-devkit/build-angular": "^0.7.5",
     "@angular-devkit/core": "^0.7.5",
+    "@ionic/ng-toolkit": "^1.0.8",
     "@types/node": "^10.9.3",
     "fs-extra": "^7.0.0",
     "lodash": "^4.17.10",
