--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
   },
   "homepage": "https://github.com/smartin85/ng-cli-hooks#readme",
   "peerDependencies": {
-    "@angular-devkit/architect": "^0.7.5",
-    "@angular-devkit/build-angular": "^0.7.5",
-    "@angular-devkit/core": "^0.7.5",
-    "@ionic/ng-toolkit": "^1.0.8"
+    "@angular-devkit/architect": "^0.12.4",
+    "@angular-devkit/build-angular": "^0.12.4",
+    "@angular-devkit/core": "^7.2.4",
+    "@ionic/angular-toolkit": "^1.4.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.7.5",
-    "@angular-devkit/build-angular": "^0.7.5",
-    "@angular-devkit/core": "^0.7.5",
-    "@ionic/ng-toolkit": "^1.0.8",
+    "@angular-devkit/architect": "^0.12.4",
+    "@angular-devkit/build-angular": "^0.12.4",
+    "@angular-devkit/core": "^7.2.4",
+    "@ionic/angular-toolkit": "^1.4.1",
     "@types/node": "^10.9.3",
     "fs-extra": "^7.0.0",
     "lodash": "^4.17.10",
