build package when installing from git

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "Hooks for the Angular CLI",
   "scripts": {
     "build": "tsc && node build.js",
+    "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
