--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "description": "Hooks for the Angular CLI",
   "scripts": {
     "build": "tsc && node create-schemas.js",
-    "xxprepare": "npm run build",
-    "xxinstall": "node create-schemas.js",
+    "prepare": "npm run build",
+    "install": "node create-schemas.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
