--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "homepage": "https://github.com/smartin85/ng-cli-hooks#readme",
   "devDependencies": {
-    "@angular-devkit/build-angular": ">=0.801.0",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@types/node": "^10.9.3",
     "typescript": "^3.6.4"
   },
@@ -40,7 +40,7 @@
     "lodash": "^4.17.15"
   },
   "peerDependencies": {
-    "@angular-devkit/build-angular": ">=0.801.0"
+    "@angular-devkit/build-angular": ">=0.803.23"
   },
   "files": [
     "dist",
