--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ng-cli-hooks",
-  "version": "11.0.1",
+  "version": "11.0.2",
   "main": "dist",
   "builders": "builders.json",
   "description": "Hooks for the Angular CLI",
   "scripts": {
-    "build": "tsc && node create-schemas.js",
+    "build": "rimraf dist && tsc && node create-schemas.js",
     "prepare": "npm run build",
     "install": "node create-schemas.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -32,9 +32,10 @@
   },
   "homepage": "https://github.com/smartin85/ng-cli-hooks#readme",
   "devDependencies": {
+    "@angular-devkit/build-angular": ">=0.1100.0 < 0.1200.0",
     "@types/node": "^14.14.22",
-    "typescript": "^4.1.3",
-    "@angular-devkit/build-angular": ">=0.1100.0 < 0.1200.0"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "lodash": "^4.17.20"
