--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-cli-hooks",
-  "version": "11.0.2",
+  "version": "13.0.1",
   "main": "dist",
   "builders": "builders.json",
   "description": "Hooks for the Angular CLI",
@@ -32,16 +32,16 @@
   },
   "homepage": "https://github.com/smartin85/ng-cli-hooks#readme",
   "devDependencies": {
-    "@angular-devkit/build-angular": ">=0.1100.0 < 0.1200.0",
-    "@types/node": "^14.14.22",
+    "@angular-devkit/build-angular": ">12.0.1",
+    "@types/node": "^16.11.9",
     "rimraf": "^3.0.2",
-    "typescript": "^4.1.3"
+    "typescript": "^4.5.2"
   },
   "dependencies": {
     "lodash": "^4.17.20"
   },
   "peerDependencies": {
-    "@angular-devkit/build-angular": ">=0.1100.0 < 0.1200.0"
+    "@angular-devkit/build-angular": ">12.0.1"
   },
   "files": [
     "dist",
